ui: date picker icon hover effect, fix date input overflow

--- a/src/pages/VotingRecords.module.scss
+++ b/src/pages/VotingRecords.module.scss
@@ -454,6 +454,17 @@ $sidebar-width: 240px;
   .filterInput {
     flex: 1;
     min-width: 0;
+
+    &::-webkit-calendar-picker-indicator {
+      cursor: pointer;
+      border-radius: $border-radius-sm;
+      padding: 2px;
+      transition: background-color 0.15s ease;
+
+      &:hover {
+        background-color: $color-blue-pale;
+      }
+    }
   }
 }
 
